Fix overflow

--- a/app/assets/stylesheets/pc/application.scss
+++ b/app/assets/stylesheets/pc/application.scss
@@ -73,7 +73,6 @@ body{
     min-height: 100%;
     margin: 0 auto;
     padding-bottom: 30px;
-    overflow-x: hidden;
     background: transparent;
   }
 }
