--- a/app/assets/stylesheets/sp/application.scss
+++ b/app/assets/stylesheets/sp/application.scss
@@ -72,7 +72,6 @@ body{
     min-height: 100%;
     margin: 0 auto;
     padding-bottom: 30px;
-    overflow-x: hidden;
     background: transparent;
   }
 }
